# android-injector

./: Cargo.toml  README.md  build.rs
examples/: inject.rs  victim.rs
shellcode/: Cargo.toml  shellcode.ld
shellcode/.cargo/: config.toml
shellcode/src/: api.rs  defines.rs  main.rs  syscalls.rs
src/: lib.rs  process_trace.rs  ptrace.rs
src/injector/: arm32.rs  arm64.rs  cross_arch.rs  mod.rs
tests/: injector.rs  process_trace.rs
tests/common/: child_factory.rs  mod.rs
