[package]
name = "android-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
thiserror = "1.0.61"
scopeguard = "1.2.0"
nix = { version = "0.29.0", features = ["process", "signal"] }
tracing = "0.1.40"
procfs = "0.16.0"
elf = "0.7.4"

[dev-dependencies]
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.16", default-features = false, features = ["trace", "color"] }
